[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
description = "A REPL for Fjord code."
documentation = "https://docs.rs/fjord-repl"
edition = "2018"
homepage = "https://github.com/arzg/fjord-repl"
license = "MIT OR Apache-2.0"
name = "fjord-repl"
repository = "https://github.com/arzg/fjord-repl"
version = "0.2.4"

[dependencies]
anyhow = "1"
atty = "0.2"
fjord = "0.4"
